# MusicTagFindutils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/tagfindutils/: __init__.py  cloudmusic.py  prototypes.py  qqmusic.py  rawquery.py  structures.py  utils.py
src/tagfindutils/cloudmusic/: rawquery.py
src/tagfindutils/qqmusic/: rawquery.py
