[metadata]
name = MusicTagFindUtils
version = file: src/tagfindutils/VERSION
description = 用 Pythonic 的方式搜索指定歌曲的标签信息
long_description = file: README.md
long_description_content_type = text/markdown
keywords = music, audio, netease, 163, qqmusic, metadata, tag
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

maintainer = nukemiko
author = nukemiko

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.8
setup_requires =
    setuptools >= 46.4.0
install_requires =
    requests >= 2.4.2

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
